<resources>
    <string name="app_name">Todule</string>
    <string name="text_title">Title:</string>
    <string name="text_description">Description:</string>
    <string name="button_save">Save</string>
    <string name="text_date">Date:</string>
    <string name="text_time">Time:</string>
    <string name="mark_done">Mark as Done</string>
    <string name="todule_list_page_title">All entries</string>
    <string name="todule_history_page_title">History</string>
    <string name="entry_created">New entry created</string>
    <string name="entry_updated">Updated</string>
    <string name="entry_done">Marked as done</string>
    <string name="entry_archived">Archived</string>
    <string name="entry_unarchived">Unarchived</string>
    <string name="entry_deleted">Deleted</string>
    <string name="entry_restored">Restored</string>
    <string name="undo_string">Undo</string>
    <string name="no_descrption">&lt; No description &gt;</string>
    <string name="reminder_intent_scheme">todule-reminder:</string>
    <string name="not_done">Not done</string>
    <string name="archive">Archive</string>
    <string name="unarchive">Unarchive</string>
    <string name="label_setting">Labels</string>
    <string name="label_preview">Preview: </string>
    <string name="no_label_selected">&lt; No label selected &gt;</string>
    <string name="text_label">Label:</string>
    <string name="select_action">Select</string>
    <string name="todule_label_add_page_title">New label</string>
    <string name="none">None</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="detail_fragment_transition"/>
    <string name="navigation_drawer_open">Open drawer</string>
    <string name="navigation_drawer_close">Close drawer</string>
    <string name="todule_title">Todule</string>
    <string name="completed_title">Completed</string>
    <string name="archive_title">Archive</string>
    <string name="label_title">Labels</string>
    <string name="deleted_title">Bin</string>
    <string name="expired_title">Expired</string>
    <string name="restore">Restore</string>
    <string name="delete_forever">Delete forever</string>
    <string name="empty_bin">Empty bin</string>
    <string name="bin_emptied">Bin emptied</string>
    <string name="expired_header">You have expired todule</string>
    <string name="go_arrow">Go</string>
    <string name="nav_time">Reminder</string>
    <string name="confirm_action">Confirm</string>
    <string name="much_time">How much time do you want to be notified before your deadline ?</string>
    <string name="label_tag_hint">Tag (max. 25 characters)</string>
    <string name="empty_view_text">Nothing in here :(</string>
</resources>
