<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:icon="@drawable/ic_edit_white_24dp"
        android:title="@string/edit"
        android:id="@+id/action_edit"
        android:visible="false"
        app:showAsAction="ifRoom"/>

    <item android:icon="@drawable/ic_delete_white_24dp"
        android:id="@+id/action_soft_delete"
        android:title="@string/delete"
        android:visible="false"
        app:showAsAction="ifRoom"/>

    <item
        android:title="@string/restore"
        android:id="@+id/action_restore"
        android:icon="@drawable/ic_restore_white_24dp"
        android:visible="false"
        app:showAsAction="ifRoom"/>
    <item
        android:title="@string/delete_forever"
        android:id="@+id/action_delete_forever"
        android:icon="@drawable/ic_delete_forever_white_24dp"
        android:visible="false"
        app:showAsAction="ifRoom"/>

    <item android:icon="@drawable/ic_archive_white_24dp"
        android:id="@+id/action_archive"
        android:title="@string/archive"
        android:visible="false"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_unarchive"
        android:title="@string/unarchive"
        android:icon="@drawable/ic_unarchive_white_24dp"
        android:visible="false"
        app:showAsAction="ifRoom" />

</menu>