<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group
        android:id="@+id/navgroup_list"
        android:checkableBehavior="single">
        <item
            android:title="@string/todule_title"
            android:id="@+id/nav_incomplete"
            android:icon="@drawable/ic_assignment_black_24dp"
            app:showAsAction="ifRoom|withText"/>
        <item
            android:title="@string/expired_title"
            android:id="@+id/nav_expired"
            android:icon="@drawable/ic_assignment_late_black_24dp"
            app:showAsAction="ifRoom|withText"/>
        <item
            android:title="@string/completed_title"
            android:id="@+id/nav_completed"
            android:icon="@drawable/ic_assignment_turned_in_black_24dp"
            app:showAsAction="ifRoom|withText"/>
        <item
            android:title="@string/archive_title"
            android:id="@+id/nav_archive"
            android:icon="@drawable/ic_archive_black_24dp"
            app:showAsAction="ifRoom|withText"/>
        <item
            android:title="@string/deleted_title"
            android:id="@+id/nav_deleted"
            android:icon="@drawable/ic_delete_white_24dp"
            app:showAsAction="ifRoom|withText"/>
    </group>
    <item android:title="Settings">
        <menu>
            <group
                android:id="@+id/navgroup_setting"
                android:checkableBehavior="single">
                <item android:title="@string/label_title"
                    android:icon="@drawable/ic_label_black_24dp"
                    android:id="@+id/nav_label"
                    app:showAsAction="ifRoom|withText"/>
                <item
                    android:title="@string/nav_time"
                    android:id="@+id/nav_time"
                    android:icon="@drawable/ic_alarm_black_18dp"
                    app:showAsAction="ifRoom|withText"/>
            </group>
        </menu>
    </item>


</menu>